# image-search

./: .gitignore  README.md  pyproject.toml  requirements.txt  rxconfig.py
scripts/: setup_db_storage.sh
supabase_pgvector_demo/: navigation.py  styles.py  supabase_pgvector_demo.py  supabase_utils.py  template.py  vecs_utils.py
supabase_pgvector_demo/pages/: __init__.py  index.py  query.py  setttings.py
